--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/recyclerViewMessage"
@@ -12,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="@dimen/_45dp">
     </androidx.recyclerview.widget.RecyclerView>
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,6 +33,12 @@
                 android:textColor="@color/black"
                 android:hint="Enter message">
             </EditText>
+            <ImageButton
+                android:onClick="uploadPicture"
+                android:id="@+id/upload_picture"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_perm_media_black_24dp"/>
 
             <ImageButton
                 android:id="@+id/send_button"
